feature: 설정 통일